Bug 416204 - It is possible to place | into "Are you sure you want to open X items?" warning
Summary: It is possible to place | into "Are you sure you want to open X items?" warning
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.66.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-13 13:19 UTC by Lucia Mrenica
Modified: 2020-01-14 18:40 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.67
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lucia Mrenica 2020-01-13 13:19:11 UTC
SUMMARY
...as if the text was editable.

STEPS TO REPRODUCE
1. Try to open multiple files at once (tested with 10)

OBSERVED RESULT
A warning shows up. If you click into the text, | appears as if the text was editable.
EXPECTED RESULT
This should not happen.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.66
Qt Version: 5.14
Comment 1 Christoph Feck 2020-01-13 20:21:21 UTC
Might be intentional to be able to mark text for copying (Shift+Cursor).
Comment 2 Lucia Mrenica 2020-01-13 20:37:22 UTC
But for that you need to click there anyway, and if you have to click you can just highlight the text with mouse like anywhere else without a need for the thing |.
Comment 3 Christoph Feck 2020-01-13 20:56:30 UTC
I didn't check, but it might be possible to Tab into that text widget.
Comment 4 Nate Graham 2020-01-13 22:23:13 UTC
The I-beam makes the text keyboard-selectable as well.

But I agree, that might be overkill. It's possible to make it only mouse-selectable, which we did for the labels in the Information panel because of this very complaint.
Comment 5 Nate Graham 2020-01-14 02:51:27 UTC
Actually it is in Dolphin after all.
Comment 6 Nate Graham 2020-01-14 03:04:15 UTC
Hah, it's actually in all the message boxes, which live in kwidgetaddons.

Patch: https://phabricator.kde.org/D26649
Comment 7 Nate Graham 2020-01-14 18:40:29 UTC
Git commit 945f1849cc246107d20d92768b67a2010f2fae39 by Nate Graham.
Committed on 14/01/2020 at 18:40.
Pushed by ngraham into branch 'master'.

[KMessageBox] Only allow selecting text in the dialog box using the mouse

Summary:
Right now, when you select text in the dialog box, an insertion point appears. It never
disappears. This looks odd: {F7882083}

The insertion point allows you to navigate the text using the keyboard. But this is kind
of pointless since you have to use the mouse to make the insertion point appear in the
text in the first place, so you might as well just use the mouse to make the selection.

This patch makes the text only mouse-selectable. Dolphin recently did the same thing
for its Information Panel labels in D25241 for the same reason.
FIXED-IN: 5.67

Test Plan:
Try to open 6 items at once in Dolphin and click-and-drag in the message box text.
Test is still selectable, but an insertion point is no longer created that cannot be
removed.

Reviewers: dfaure, #frameworks, #vdg, ndavis

Reviewed By: #vdg, ndavis

Subscribers: broulik, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D26649

M  +2    -2    src/kmessagebox.cpp

https://commits.kde.org/kwidgetsaddons/945f1849cc246107d20d92768b67a2010f2fae39